[package]
name = "gccjit_sys"
version = "0.0.1"
authors = ["Sean Gillespie <sean.william.g@gmail.com>"]
links = "gccjit"
description = "Raw bindings to libgccjit. Companion to the gccjit crate."
keywords = ["compiler", "jit", "gcc"]
license = "GPL-3.0"
repository = "https://github.com/swgillespie/gccjit.rs"

[dependencies]
libc = "0.1.6"
